projects/terraform/regional/aws_security_group_demo.tf
##
# AWS security group demoe.
##

# Create a security group suitable for typical demo traffic,
# such as SSH for connecting to an EC2 instance, and web traffic.
# You will probably want to customize this for your own needs.
resource "aws_security_group" "demo" {
  name        = "demo"
  description = "Demo traffic such as SSH, HTTP, HTTPS"
  #vpc_id      = aws_vpc.main.id

  # Allow SSH
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow HTTP
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow HTTPS
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow all outbound traffic.
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}
